fix list view height on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ a.hide-list-view:hover {
 .list-view {
     background-color: white;
     width: 100%;
-    height: 600px;
+    height: 565px;
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -155,7 +155,7 @@ a.hide-list-view:hover {
 
 @media (max-height: 768px) {
     .list-view {
-        height: 300px;
+        height: 325px;
     }
 }
 
